Removed save button in FragmentScoreCard and refactored code

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,13 @@ allprojects {
         jcenter()
         
     }
+    //TODO: Xlint code
+/*    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.encoding = 'UTF-8'
+            options.compileArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }*/
 }
 
 task clean(type: Delete) {
