--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,13 +20,13 @@ allprojects {
         jcenter()
         
     }
-    //TODO: Xlint code
-/*    gradle.projectsEvaluated {
+    //TODO: Xlint code - use to find deprecated warnings (see Build output)
+    gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
             options.encoding = 'UTF-8'
-            options.compileArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
         }
-    }*/
+    }
 }
 
 task clean(type: Delete) {
